Rename Todo List to PRPBOT and update list ID

--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@ li span {
 <body>
 
 <div class="app">
-  <h1>My Todo List</h1>
+  <h1>PRPBOT</h1>
 
   <div class="input-group">
     <input type="text" id="todoInput" placeholder="Add a new task..." />
     <button onclick="addTodo()">Add</button>
   </div>
 
-  <ul id="todoList"></ul>
+  <ul id="BOTPRP"></ul>
 </div>
 
 <script>
